feat: change to hostname module

--- a/roles/linux/tasks/main.yml
+++ b/roles/linux/tasks/main.yml
@@ -27,7 +27,8 @@
     daemon_reload: true
 
 - name: Set hostname
-  shell: "hostnamectl set-hostname {{ inventory_hostname }}"
+  hostname:
+    name: "{{ inventory_hostname }}"
 
 - name: Enable bbr
   shell: |
