--- a/roles/linux/tasks/main.yml
+++ b/roles/linux/tasks/main.yml
@@ -52,10 +52,4 @@
   template:
     src: sshd_config.conf.j2
     dest: /etc/ssh/sshd_config.d/01_jiz4oh.conf
-
-- name: Restart ssh
-  systemd:
-    name: ssh
-    state: restarted
-    enabled: true
-    daemon_reload: true
+  notify: "restart sshd"
